--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ html,body{
     background: #2f2f2f;
     margin: 0;
     padding: 0;
-    /* overflow: hidden; */
+     overflow: hidden; 
 }
 *, :before, :after{
     box-sizing: border-box;
