--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,9 @@ html,body{
 *, :before, :after{
     box-sizing: border-box;
 }
+[class*="icono-"]:before, [class*="icono-"]:after {
+    box-sizing: content-box;
+}
 .tit{
     background-color: #050C19;
     color: #E5FBFF;
@@ -67,6 +70,7 @@ html,body{
     font-family: "微软雅黑";
     font-size: 20px;
     text-shadow: #2f2f2f;
+    color: #2f2f2f;
 }
 .iconfont {
     font-family: "iconfont" !important;
@@ -75,6 +79,16 @@ html,body{
     -webkit-font-smoothing: antialiased;
     -webkit-text-stroke-width: 0.2px;
     -moz-osx-font-smoothing: grayscale;
+}
+[class*="icono-"] {
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
+    font-style: normal;
+    color: #2f2f2f;
+    text-align: left;
+    text-indent: -9999px;
+    direction: ltr;
 }
 .social span {
     font-size: 20px;
